--- a/archives/toutiao-search/2023-11-27.md
+++ b/archives/toutiao-search/2023-11-27.md
@@ -1,68 +1,81 @@
 # 2023-11-27
 
-共 203 条
+共 214 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Nov 27 2023 15:00:36 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Mon Nov 27 2023 16:00:57 GMT+0800 (China Standard Time) -->
 1. [4名中国留学生在加拿大车祸身亡](https://so.toutiao.com/search?keyword=4名中国留学生在加拿大车祸身亡)
 1. [全红婵称心态受影响失误比较大](https://so.toutiao.com/search?keyword=全红婵称心态受影响失误比较大)
 1. [重点人群如何防治冬季呼吸道疾病](https://so.toutiao.com/search?keyword=重点人群如何防治冬季呼吸道疾病)
 1. [羽绒服跌下“神坛”了吗](https://so.toutiao.com/search?keyword=羽绒服跌下“神坛”了吗)
-1. [全红婵陈芋汐全锦赛双人十米台夺冠](https://so.toutiao.com/search?keyword=全红婵陈芋汐全锦赛双人十米台夺冠)
-1. [MH370乘客家属索赔案开庭](https://so.toutiao.com/search?keyword=MH370乘客家属索赔案开庭)
-1. [警方通报特斯拉连撞11车事故](https://so.toutiao.com/search?keyword=警方通报特斯拉连撞11车事故)
+1. [女儿偷偷回家爸爸表情堪比北影教材](https://so.toutiao.com/search?keyword=女儿偷偷回家爸爸表情堪比北影教材)
+1. [马航MH370事件家属：要的是真相](https://so.toutiao.com/search?keyword=马航MH370事件家属：要的是真相)
 1. [国内一造船厂下班画面在国外疯传](https://so.toutiao.com/search?keyword=国内一造船厂下班画面在国外疯传)
 1. [羽绒服替代品冲锋衣军大衣热销](https://so.toutiao.com/search?keyword=羽绒服替代品冲锋衣军大衣热销)
 1. [媒体：别怪办事群众要发火](https://so.toutiao.com/search?keyword=媒体：别怪办事群众要发火)
+1. [官方回应女子政务大厅发飙](https://so.toutiao.com/search?keyword=官方回应女子政务大厅发飙)
 1. [济南辟谣学校附近出现人贩子](https://so.toutiao.com/search?keyword=济南辟谣学校附近出现人贩子)
+1. [孙东海首次回应与张柏芝关系](https://so.toutiao.com/search?keyword=孙东海首次回应与张柏芝关系)
 1. [高以翔父亲去世](https://so.toutiao.com/search?keyword=高以翔父亲去世)
 1. [女子办事大厅发飙：每次都说缺材料](https://so.toutiao.com/search?keyword=女子办事大厅发飙：每次都说缺材料)
-1. [孙东海首次回应与张柏芝关系](https://so.toutiao.com/search?keyword=孙东海首次回应与张柏芝关系)
-1. [马航MH370事件家属：要的是真相](https://so.toutiao.com/search?keyword=马航MH370事件家属：要的是真相)
-1. [官方回应女子政务大厅发飙](https://so.toutiao.com/search?keyword=官方回应女子政务大厅发飙)
-1. [杭州中毒一家四口为何在家里烧木炭](https://so.toutiao.com/search?keyword=杭州中毒一家四口为何在家里烧木炭)
-1. [大V：别被北证的一时疯狂吸引进去](https://so.toutiao.com/search?keyword=大V：别被北证的一时疯狂吸引进去)
-1. [女生无意将沃柑放柜子1周变霉球](https://so.toutiao.com/search?keyword=女生无意将沃柑放柜子1周变霉球)
-1. [“侯康配”首场造势直捣绿营大本营](https://so.toutiao.com/search?keyword=“侯康配”首场造势直捣绿营大本营)
-1. [演唱会现场送给大小杨哥的礼物](https://so.toutiao.com/search?keyword=演唱会现场送给大小杨哥的礼物)
-1. [长安汽车：华为新公司不造车](https://so.toutiao.com/search?keyword=长安汽车：华为新公司不造车)
-1. [16岁女生没考上985遭父亲家暴](https://so.toutiao.com/search?keyword=16岁女生没考上985遭父亲家暴)
+1. [医生手套上还残留血迹就给孩子采血](https://so.toutiao.com/search?keyword=医生手套上还残留血迹就给孩子采血)
+1. [王毅将主持联合国巴以问题高级别会议](https://so.toutiao.com/search?keyword=王毅将主持联合国巴以问题高级别会议)
+1. [新Panamera试驾](https://so.toutiao.com/search?keyword=新Panamera试驾)
 1. [买25元肉绞成馅变32元拒付款被吐槽](https://so.toutiao.com/search?keyword=买25元肉绞成馅变32元拒付款被吐槽)
-1. [40岁“渐冻症”网红卓君去世](https://so.toutiao.com/search?keyword=40岁“渐冻症”网红卓君去世)
-1. [谢晋女儿谢庆庆去世](https://so.toutiao.com/search?keyword=谢晋女儿谢庆庆去世)
-1. [汽车博主马哥车祸去世](https://so.toutiao.com/search?keyword=汽车博主马哥车祸去世)
-1. [哈尔滨“宝妈”群13人被抓](https://so.toutiao.com/search?keyword=哈尔滨“宝妈”群13人被抓)
-1. [有偿借父母的存款买车合适吗](https://so.toutiao.com/search?keyword=有偿借父母的存款买车合适吗)
-1. [两女子将米面油和牛奶倒进湘江放生](https://so.toutiao.com/search?keyword=两女子将米面油和牛奶倒进湘江放生)
+1. [比亚迪月内第二次降价](https://so.toutiao.com/search?keyword=比亚迪月内第二次降价)
 1. [中纪委：科员异常的转账记录藏猫腻](https://so.toutiao.com/search?keyword=中纪委：科员异常的转账记录藏猫腻)
-1. [民众党蔡壁如：支持柯文哲不变](https://so.toutiao.com/search?keyword=民众党蔡壁如：支持柯文哲不变)
+1. [演唱会现场送给大小杨哥的礼物](https://so.toutiao.com/search?keyword=演唱会现场送给大小杨哥的礼物)
+1. [北证50尾盘涨幅再次扩大至10%](https://so.toutiao.com/search?keyword=北证50尾盘涨幅再次扩大至10%)
+1. [女生无意将沃柑放柜子1周变霉球](https://so.toutiao.com/search?keyword=女生无意将沃柑放柜子1周变霉球)
 1. [今天是高以翔去世4周年](https://so.toutiao.com/search?keyword=今天是高以翔去世4周年)
+1. [杭州中毒一家四口为何在家里烧木炭](https://so.toutiao.com/search?keyword=杭州中毒一家四口为何在家里烧木炭)
+1. [埃弗顿名宿谈加纳乔倒钩](https://so.toutiao.com/search?keyword=埃弗顿名宿谈加纳乔倒钩)
+1. [哈尔滨“宝妈”群13人被抓](https://so.toutiao.com/search?keyword=哈尔滨“宝妈”群13人被抓)
+1. [开往厦门高铁上的生死7分钟](https://so.toutiao.com/search?keyword=开往厦门高铁上的生死7分钟)
+1. [大V：别被北证的一时疯狂吸引进去](https://so.toutiao.com/search?keyword=大V：别被北证的一时疯狂吸引进去)
+1. [40岁“渐冻症”网红卓君去世](https://so.toutiao.com/search?keyword=40岁“渐冻症”网红卓君去世)
+1. [16岁女生没考上985遭父亲家暴](https://so.toutiao.com/search?keyword=16岁女生没考上985遭父亲家暴)
+1. [谢晋女儿谢庆庆去世](https://so.toutiao.com/search?keyword=谢晋女儿谢庆庆去世)
+1. [游客吐槽餐厅菜量少 老板挥拳打人](https://so.toutiao.com/search?keyword=游客吐槽餐厅菜量少+老板挥拳打人)
+1. [有偿借父母的存款买车合适吗](https://so.toutiao.com/search?keyword=有偿借父母的存款买车合适吗)
+1. [家属：拿了赔偿也不代表原谅马航](https://so.toutiao.com/search?keyword=家属：拿了赔偿也不代表原谅马航)
+1. [狗子在校园里偷外卖被抓现行](https://so.toutiao.com/search?keyword=狗子在校园里偷外卖被抓现行)
+1. [贵阳女子到银行取亡夫资产被拒](https://so.toutiao.com/search?keyword=贵阳女子到银行取亡夫资产被拒)
+1. [MH370乘客家属索赔案开庭](https://so.toutiao.com/search?keyword=MH370乘客家属索赔案开庭)
+1. [邱毅：围剿柯文哲损人害己](https://so.toutiao.com/search?keyword=邱毅：围剿柯文哲损人害己)
+1. [汽车博主马哥车祸去世](https://so.toutiao.com/search?keyword=汽车博主马哥车祸去世)
+1. [男子手持长棍殴打环卫工](https://so.toutiao.com/search?keyword=男子手持长棍殴打环卫工)
+1. [司机突发失明路过司机教科书式救援](https://so.toutiao.com/search?keyword=司机突发失明路过司机教科书式救援)
+1. [律师：小伙喊老板娘“花姑娘”侵权](https://so.toutiao.com/search?keyword=律师：小伙喊老板娘“花姑娘”侵权)
+1. [媒体：A股市场进入发展新阶段](https://so.toutiao.com/search?keyword=媒体：A股市场进入发展新阶段)
+1. [两女子将米面油和牛奶倒进湘江放生](https://so.toutiao.com/search?keyword=两女子将米面油和牛奶倒进湘江放生)
+1. [上官正义再次举报 武汉警方已介入](https://so.toutiao.com/search?keyword=上官正义再次举报+武汉警方已介入)
+1. [特斯拉要求刹车失灵女车主赔500万](https://so.toutiao.com/search?keyword=特斯拉要求刹车失灵女车主赔500万)
+1. [近期我国急性呼吸道疾病持续上升](https://so.toutiao.com/search?keyword=近期我国急性呼吸道疾病持续上升)
+1. [五角大楼前顾问：乌克兰已输](https://so.toutiao.com/search?keyword=五角大楼前顾问：乌克兰已输)
+1. [媒体：中日韩外长会再开是好的开始](https://so.toutiao.com/search?keyword=媒体：中日韩外长会再开是好的开始)
+1. [全红婵陈芋汐全锦赛双人十米台夺冠](https://so.toutiao.com/search?keyword=全红婵陈芋汐全锦赛双人十米台夺冠)
+1. [警方通报特斯拉连撞11车事故](https://so.toutiao.com/search?keyword=警方通报特斯拉连撞11车事故)
+1. [“侯康配”首场造势直捣绿营大本营](https://so.toutiao.com/search?keyword=“侯康配”首场造势直捣绿营大本营)
+1. [长安汽车：华为新公司不造车](https://so.toutiao.com/search?keyword=长安汽车：华为新公司不造车)
+1. [民众党蔡壁如：支持柯文哲不变](https://so.toutiao.com/search?keyword=民众党蔡壁如：支持柯文哲不变)
 1. [深蓝CEO：明年全球目标销量45万辆](https://so.toutiao.com/search?keyword=深蓝CEO：明年全球目标销量45万辆)
 1. [媒体：洱海是母亲湖不是澡堂子](https://so.toutiao.com/search?keyword=媒体：洱海是母亲湖不是澡堂子)
 1. [中国恒大新增被执行人信息](https://so.toutiao.com/search?keyword=中国恒大新增被执行人信息)
-1. [律师：小伙喊老板娘“花姑娘”侵权](https://so.toutiao.com/search?keyword=律师：小伙喊老板娘“花姑娘”侵权)
-1. [家属：拿了赔偿也不代表原谅马航](https://so.toutiao.com/search?keyword=家属：拿了赔偿也不代表原谅马航)
 1. [华为小米魅族上车智能汽车赛道](https://so.toutiao.com/search?keyword=华为小米魅族上车智能汽车赛道)
-1. [上官正义再次举报 武汉警方已介入](https://so.toutiao.com/search?keyword=上官正义再次举报+武汉警方已介入)
 1. [美国数千名抗议者封堵曼哈顿大桥](https://so.toutiao.com/search?keyword=美国数千名抗议者封堵曼哈顿大桥)
 1. [拒付上百吨油费：造假还是地方保护](https://so.toutiao.com/search?keyword=拒付上百吨油费：造假还是地方保护)
-1. [五角大楼前顾问：乌克兰已输](https://so.toutiao.com/search?keyword=五角大楼前顾问：乌克兰已输)
 1. [朱立伦发文：蓝军团结挺侯友宜赢](https://so.toutiao.com/search?keyword=朱立伦发文：蓝军团结挺侯友宜赢)
-1. [医生手套上还残留血迹就给孩子采血](https://so.toutiao.com/search?keyword=医生手套上还残留血迹就给孩子采血)
 1. [北交所加强交易监管](https://so.toutiao.com/search?keyword=北交所加强交易监管)
-1. [邱毅：围剿柯文哲损人害己](https://so.toutiao.com/search?keyword=邱毅：围剿柯文哲损人害己)
 1. [男子高速上开“自动驾驶”后撞护栏](https://so.toutiao.com/search?keyword=男子高速上开“自动驾驶”后撞护栏)
 1. [56岁施一公院士上马跑进4小时](https://so.toutiao.com/search?keyword=56岁施一公院士上马跑进4小时)
-1. [贵阳女子到银行取亡夫资产被拒](https://so.toutiao.com/search?keyword=贵阳女子到银行取亡夫资产被拒)
 1. [爸爸开家长会看到孩子写的信无语了](https://so.toutiao.com/search?keyword=爸爸开家长会看到孩子写的信无语了)
 1. [央视聚焦巴以冲突：艰难的停火](https://so.toutiao.com/search?keyword=央视聚焦巴以冲突：艰难的停火)
 1. [军大衣花棉袄为什么突然火了](https://so.toutiao.com/search?keyword=军大衣花棉袄为什么突然火了)
 1. [菲军高官声称战机被中国“跟踪”](https://so.toutiao.com/search?keyword=菲军高官声称战机被中国“跟踪”)
-1. [开往厦门高铁上的生死7分钟](https://so.toutiao.com/search?keyword=开往厦门高铁上的生死7分钟)
 1. [怎样区分感冒流感和支原体肺炎](https://so.toutiao.com/search?keyword=怎样区分感冒流感和支原体肺炎)
 1. [解某某等多人被采取刑事强制措施](https://so.toutiao.com/search?keyword=解某某等多人被采取刑事强制措施)
 1. [如何看待张译《刀尖》票房不及预期](https://so.toutiao.com/search?keyword=如何看待张译《刀尖》票房不及预期)
-1. [近期我国急性呼吸道疾病持续上升](https://so.toutiao.com/search?keyword=近期我国急性呼吸道疾病持续上升)
 1. [掘金赛季至今主场战绩8胜0负](https://so.toutiao.com/search?keyword=掘金赛季至今主场战绩8胜0负)
 1. [三星电子维持双CEO制度](https://so.toutiao.com/search?keyword=三星电子维持双CEO制度)
 1. [3名俄罗斯特工在乌克兰中毒身亡](https://so.toutiao.com/search?keyword=3名俄罗斯特工在乌克兰中毒身亡)
@@ -73,7 +86,6 @@
 1. [宝马车冲进酒店前台被撞粉碎](https://so.toutiao.com/search?keyword=宝马车冲进酒店前台被撞粉碎)
 1. [实探“禁止私熏腊肉”的四川通江](https://so.toutiao.com/search?keyword=实探“禁止私熏腊肉”的四川通江)
 1. [你婚后会选择和老人住在一起吗](https://so.toutiao.com/search?keyword=你婚后会选择和老人住在一起吗)
-1. [狗子在校园里偷外卖被抓现行](https://so.toutiao.com/search?keyword=狗子在校园里偷外卖被抓现行)
 1. [孩子落水 东北大哥跳进冰水施救](https://so.toutiao.com/search?keyword=孩子落水+东北大哥跳进冰水施救)
 1. [女子疑找熟人扫脸诈骗500多万](https://so.toutiao.com/search?keyword=女子疑找熟人扫脸诈骗500多万)
 1. [11月楼市成交量整体同环比均下降](https://so.toutiao.com/search?keyword=11月楼市成交量整体同环比均下降)
@@ -147,7 +159,6 @@
 1. [浙江一小学因多名学生发热全班停课](https://so.toutiao.com/search?keyword=浙江一小学因多名学生发热全班停课)
 1. [加沙停火协议进入最后一天](https://so.toutiao.com/search?keyword=加沙停火协议进入最后一天)
 1. [罗德里戈首次连续3场为皇马进球](https://so.toutiao.com/search?keyword=罗德里戈首次连续3场为皇马进球)
-1. [比亚迪月内第二次降价](https://so.toutiao.com/search?keyword=比亚迪月内第二次降价)
 1. [重庆部分摊主仍使用将被禁的生鲜灯](https://so.toutiao.com/search?keyword=重庆部分摊主仍使用将被禁的生鲜灯)
 1. [美国黑色星期五购物人数或破1.3亿](https://so.toutiao.com/search?keyword=美国黑色星期五购物人数或破1.3亿)
 1. [比亚迪：促销的目的是加速油转电](https://so.toutiao.com/search?keyword=比亚迪：促销的目的是加速油转电)
