--- a/archives/toutiao-search/2023-11-27.md
+++ b/archives/toutiao-search/2023-11-27.md
@@ -1,62 +1,82 @@
 # 2023-11-27
 
-共 214 条
+共 233 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Nov 27 2023 16:00:57 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Mon Nov 27 2023 17:00:54 GMT+0800 (China Standard Time) -->
 1. [4名中国留学生在加拿大车祸身亡](https://so.toutiao.com/search?keyword=4名中国留学生在加拿大车祸身亡)
+1. [媒体：特斯拉连撞11车没必要急着下定论](https://so.toutiao.com/search?keyword=媒体：特斯拉连撞11车没必要急着下定论)
+1. [以国之名 接英雄回家](https://so.toutiao.com/search?keyword=以国之名+接英雄回家)
+1. [福建舰弹射小红车 离海试还有多远](https://so.toutiao.com/search?keyword=福建舰弹射小红车+离海试还有多远)
+1. [特斯拉要求刹车失灵女车主赔500万](https://so.toutiao.com/search?keyword=特斯拉要求刹车失灵女车主赔500万)
+1. [美媒关注：福建舰进行电磁弹射试验](https://so.toutiao.com/search?keyword=美媒关注：福建舰进行电磁弹射试验)
+1. [国内一造船厂下班画面在国外疯传](https://so.toutiao.com/search?keyword=国内一造船厂下班画面在国外疯传)
+1. [“侯康配”首场造势直捣绿营大本营](https://so.toutiao.com/search?keyword=“侯康配”首场造势直捣绿营大本营)
+1. [支原体肺炎是新冠的变异吗](https://so.toutiao.com/search?keyword=支原体肺炎是新冠的变异吗)
+1. [外媒关注国产航母新测试](https://so.toutiao.com/search?keyword=外媒关注国产航母新测试)
+1. [孙东海首次回应与张柏芝关系](https://so.toutiao.com/search?keyword=孙东海首次回应与张柏芝关系)
+1. [羽绒服替代品冲锋衣军大衣热销](https://so.toutiao.com/search?keyword=羽绒服替代品冲锋衣军大衣热销)
+1. [羽绒服跌下“神坛”了吗](https://so.toutiao.com/search?keyword=羽绒服跌下“神坛”了吗)
+1. [媒体：别怪办事群众要发火](https://so.toutiao.com/search?keyword=媒体：别怪办事群众要发火)
+1. [马航MH370事件家属：要的是真相](https://so.toutiao.com/search?keyword=马航MH370事件家属：要的是真相)
+1. [高以翔父亲去世](https://so.toutiao.com/search?keyword=高以翔父亲去世)
+1. [官方回应女子政务大厅发飙](https://so.toutiao.com/search?keyword=官方回应女子政务大厅发飙)
+1. [霍震霆父子四人和郭晶晶合照](https://so.toutiao.com/search?keyword=霍震霆父子四人和郭晶晶合照)
+1. [女儿偷偷回家爸爸表情堪比北影教材](https://so.toutiao.com/search?keyword=女儿偷偷回家爸爸表情堪比北影教材)
+1. [阿根廷准外长访巴西：阿巴是兄弟](https://so.toutiao.com/search?keyword=阿根廷准外长访巴西：阿巴是兄弟)
+1. [演唱会现场送给大小杨哥的礼物](https://so.toutiao.com/search?keyword=演唱会现场送给大小杨哥的礼物)
+1. [买25元肉绞成馅变32元拒付款被吐槽](https://so.toutiao.com/search?keyword=买25元肉绞成馅变32元拒付款被吐槽)
+1. [49具烈士遗骸无声讲述着战争场景](https://so.toutiao.com/search?keyword=49具烈士遗骸无声讲述着战争场景)
+1. [中纪委：科员异常的转账记录藏猫腻](https://so.toutiao.com/search?keyword=中纪委：科员异常的转账记录藏猫腻)
+1. [余华英案背后那些支离破碎的家庭](https://so.toutiao.com/search?keyword=余华英案背后那些支离破碎的家庭)
+1. [中纪委网站：一屋不扫何以扫天下](https://so.toutiao.com/search?keyword=中纪委网站：一屋不扫何以扫天下)
+1. [大V：别被北证的一时疯狂吸引进去](https://so.toutiao.com/search?keyword=大V：别被北证的一时疯狂吸引进去)
+1. [MH370乘客家属索赔案开庭](https://so.toutiao.com/search?keyword=MH370乘客家属索赔案开庭)
+1. [女生无意将沃柑放柜子1周变霉球](https://so.toutiao.com/search?keyword=女生无意将沃柑放柜子1周变霉球)
+1. [谢晋女儿谢庆庆去世](https://so.toutiao.com/search?keyword=谢晋女儿谢庆庆去世)
+1. [16岁女生没考上985遭父亲家暴](https://so.toutiao.com/search?keyword=16岁女生没考上985遭父亲家暴)
+1. [今天是高以翔去世4周年](https://so.toutiao.com/search?keyword=今天是高以翔去世4周年)
+1. [《故乡，别来无恙》群像戏共情力强](https://so.toutiao.com/search?keyword=《故乡，别来无恙》群像戏共情力强)
+1. [推诿扯皮等不作为问题同样违纪违规](https://so.toutiao.com/search?keyword=推诿扯皮等不作为问题同样违纪违规)
+1. [两女子将米面油和牛奶倒进湘江放生](https://so.toutiao.com/search?keyword=两女子将米面油和牛奶倒进湘江放生)
+1. [贵阳女子到银行取亡夫资产被拒](https://so.toutiao.com/search?keyword=贵阳女子到银行取亡夫资产被拒)
+1. [律师：小伙喊老板娘“花姑娘”侵权](https://so.toutiao.com/search?keyword=律师：小伙喊老板娘“花姑娘”侵权)
+1. [哈尔滨“宝妈”群13人被抓](https://so.toutiao.com/search?keyword=哈尔滨“宝妈”群13人被抓)
+1. [专家分析俄乌冲突何时才能结束](https://so.toutiao.com/search?keyword=专家分析俄乌冲突何时才能结束)
+1. [40岁“渐冻症”网红卓君去世](https://so.toutiao.com/search?keyword=40岁“渐冻症”网红卓君去世)
+1. [汽车博主马哥车祸去世](https://so.toutiao.com/search?keyword=汽车博主马哥车祸去世)
+1. [邱毅：围剿柯文哲损人害己](https://so.toutiao.com/search?keyword=邱毅：围剿柯文哲损人害己)
+1. [开往厦门高铁上的生死7分钟](https://so.toutiao.com/search?keyword=开往厦门高铁上的生死7分钟)
+1. [我国肺癌5年生存率逐年上升](https://so.toutiao.com/search?keyword=我国肺癌5年生存率逐年上升)
+1. [沪深两市今日成交额合计8288亿元](https://so.toutiao.com/search?keyword=沪深两市今日成交额合计8288亿元)
+1. [北京纪委监委：孙铁江被查](https://so.toutiao.com/search?keyword=北京纪委监委：孙铁江被查)
+1. [近期我国急性呼吸道疾病持续上升](https://so.toutiao.com/search?keyword=近期我国急性呼吸道疾病持续上升)
+1. [贾跃亭卖造车工厂套现8600万](https://so.toutiao.com/search?keyword=贾跃亭卖造车工厂套现8600万)
+1. [何冲评全红婵粉丝斥裁判压分](https://so.toutiao.com/search?keyword=何冲评全红婵粉丝斥裁判压分)
+1. [卡梅伦对华态度成英国媒体报道焦点](https://so.toutiao.com/search?keyword=卡梅伦对华态度成英国媒体报道焦点)
 1. [全红婵称心态受影响失误比较大](https://so.toutiao.com/search?keyword=全红婵称心态受影响失误比较大)
 1. [重点人群如何防治冬季呼吸道疾病](https://so.toutiao.com/search?keyword=重点人群如何防治冬季呼吸道疾病)
-1. [羽绒服跌下“神坛”了吗](https://so.toutiao.com/search?keyword=羽绒服跌下“神坛”了吗)
-1. [女儿偷偷回家爸爸表情堪比北影教材](https://so.toutiao.com/search?keyword=女儿偷偷回家爸爸表情堪比北影教材)
-1. [马航MH370事件家属：要的是真相](https://so.toutiao.com/search?keyword=马航MH370事件家属：要的是真相)
-1. [国内一造船厂下班画面在国外疯传](https://so.toutiao.com/search?keyword=国内一造船厂下班画面在国外疯传)
-1. [羽绒服替代品冲锋衣军大衣热销](https://so.toutiao.com/search?keyword=羽绒服替代品冲锋衣军大衣热销)
-1. [媒体：别怪办事群众要发火](https://so.toutiao.com/search?keyword=媒体：别怪办事群众要发火)
-1. [官方回应女子政务大厅发飙](https://so.toutiao.com/search?keyword=官方回应女子政务大厅发飙)
 1. [济南辟谣学校附近出现人贩子](https://so.toutiao.com/search?keyword=济南辟谣学校附近出现人贩子)
-1. [孙东海首次回应与张柏芝关系](https://so.toutiao.com/search?keyword=孙东海首次回应与张柏芝关系)
-1. [高以翔父亲去世](https://so.toutiao.com/search?keyword=高以翔父亲去世)
 1. [女子办事大厅发飙：每次都说缺材料](https://so.toutiao.com/search?keyword=女子办事大厅发飙：每次都说缺材料)
 1. [医生手套上还残留血迹就给孩子采血](https://so.toutiao.com/search?keyword=医生手套上还残留血迹就给孩子采血)
 1. [王毅将主持联合国巴以问题高级别会议](https://so.toutiao.com/search?keyword=王毅将主持联合国巴以问题高级别会议)
 1. [新Panamera试驾](https://so.toutiao.com/search?keyword=新Panamera试驾)
-1. [买25元肉绞成馅变32元拒付款被吐槽](https://so.toutiao.com/search?keyword=买25元肉绞成馅变32元拒付款被吐槽)
 1. [比亚迪月内第二次降价](https://so.toutiao.com/search?keyword=比亚迪月内第二次降价)
-1. [中纪委：科员异常的转账记录藏猫腻](https://so.toutiao.com/search?keyword=中纪委：科员异常的转账记录藏猫腻)
-1. [演唱会现场送给大小杨哥的礼物](https://so.toutiao.com/search?keyword=演唱会现场送给大小杨哥的礼物)
 1. [北证50尾盘涨幅再次扩大至10%](https://so.toutiao.com/search?keyword=北证50尾盘涨幅再次扩大至10%)
-1. [女生无意将沃柑放柜子1周变霉球](https://so.toutiao.com/search?keyword=女生无意将沃柑放柜子1周变霉球)
-1. [今天是高以翔去世4周年](https://so.toutiao.com/search?keyword=今天是高以翔去世4周年)
 1. [杭州中毒一家四口为何在家里烧木炭](https://so.toutiao.com/search?keyword=杭州中毒一家四口为何在家里烧木炭)
 1. [埃弗顿名宿谈加纳乔倒钩](https://so.toutiao.com/search?keyword=埃弗顿名宿谈加纳乔倒钩)
-1. [哈尔滨“宝妈”群13人被抓](https://so.toutiao.com/search?keyword=哈尔滨“宝妈”群13人被抓)
-1. [开往厦门高铁上的生死7分钟](https://so.toutiao.com/search?keyword=开往厦门高铁上的生死7分钟)
-1. [大V：别被北证的一时疯狂吸引进去](https://so.toutiao.com/search?keyword=大V：别被北证的一时疯狂吸引进去)
-1. [40岁“渐冻症”网红卓君去世](https://so.toutiao.com/search?keyword=40岁“渐冻症”网红卓君去世)
-1. [16岁女生没考上985遭父亲家暴](https://so.toutiao.com/search?keyword=16岁女生没考上985遭父亲家暴)
-1. [谢晋女儿谢庆庆去世](https://so.toutiao.com/search?keyword=谢晋女儿谢庆庆去世)
 1. [游客吐槽餐厅菜量少 老板挥拳打人](https://so.toutiao.com/search?keyword=游客吐槽餐厅菜量少+老板挥拳打人)
 1. [有偿借父母的存款买车合适吗](https://so.toutiao.com/search?keyword=有偿借父母的存款买车合适吗)
 1. [家属：拿了赔偿也不代表原谅马航](https://so.toutiao.com/search?keyword=家属：拿了赔偿也不代表原谅马航)
 1. [狗子在校园里偷外卖被抓现行](https://so.toutiao.com/search?keyword=狗子在校园里偷外卖被抓现行)
-1. [贵阳女子到银行取亡夫资产被拒](https://so.toutiao.com/search?keyword=贵阳女子到银行取亡夫资产被拒)
-1. [MH370乘客家属索赔案开庭](https://so.toutiao.com/search?keyword=MH370乘客家属索赔案开庭)
-1. [邱毅：围剿柯文哲损人害己](https://so.toutiao.com/search?keyword=邱毅：围剿柯文哲损人害己)
-1. [汽车博主马哥车祸去世](https://so.toutiao.com/search?keyword=汽车博主马哥车祸去世)
 1. [男子手持长棍殴打环卫工](https://so.toutiao.com/search?keyword=男子手持长棍殴打环卫工)
 1. [司机突发失明路过司机教科书式救援](https://so.toutiao.com/search?keyword=司机突发失明路过司机教科书式救援)
-1. [律师：小伙喊老板娘“花姑娘”侵权](https://so.toutiao.com/search?keyword=律师：小伙喊老板娘“花姑娘”侵权)
 1. [媒体：A股市场进入发展新阶段](https://so.toutiao.com/search?keyword=媒体：A股市场进入发展新阶段)
-1. [两女子将米面油和牛奶倒进湘江放生](https://so.toutiao.com/search?keyword=两女子将米面油和牛奶倒进湘江放生)
 1. [上官正义再次举报 武汉警方已介入](https://so.toutiao.com/search?keyword=上官正义再次举报+武汉警方已介入)
-1. [特斯拉要求刹车失灵女车主赔500万](https://so.toutiao.com/search?keyword=特斯拉要求刹车失灵女车主赔500万)
-1. [近期我国急性呼吸道疾病持续上升](https://so.toutiao.com/search?keyword=近期我国急性呼吸道疾病持续上升)
 1. [五角大楼前顾问：乌克兰已输](https://so.toutiao.com/search?keyword=五角大楼前顾问：乌克兰已输)
 1. [媒体：中日韩外长会再开是好的开始](https://so.toutiao.com/search?keyword=媒体：中日韩外长会再开是好的开始)
 1. [全红婵陈芋汐全锦赛双人十米台夺冠](https://so.toutiao.com/search?keyword=全红婵陈芋汐全锦赛双人十米台夺冠)
 1. [警方通报特斯拉连撞11车事故](https://so.toutiao.com/search?keyword=警方通报特斯拉连撞11车事故)
-1. [“侯康配”首场造势直捣绿营大本营](https://so.toutiao.com/search?keyword=“侯康配”首场造势直捣绿营大本营)
 1. [长安汽车：华为新公司不造车](https://so.toutiao.com/search?keyword=长安汽车：华为新公司不造车)
 1. [民众党蔡壁如：支持柯文哲不变](https://so.toutiao.com/search?keyword=民众党蔡壁如：支持柯文哲不变)
 1. [深蓝CEO：明年全球目标销量45万辆](https://so.toutiao.com/search?keyword=深蓝CEO：明年全球目标销量45万辆)
@@ -82,7 +102,6 @@
 1. [返乡创业女子养鸵鸟：最省心](https://so.toutiao.com/search?keyword=返乡创业女子养鸵鸟：最省心)
 1. [今日午盘两市共41股涨停](https://so.toutiao.com/search?keyword=今日午盘两市共41股涨停)
 1. [台媒关注：福建舰短暂离开码头](https://so.toutiao.com/search?keyword=台媒关注：福建舰短暂离开码头)
-1. [媒体：特斯拉连撞11车没必要急着下定论](https://so.toutiao.com/search?keyword=媒体：特斯拉连撞11车没必要急着下定论)
 1. [宝马车冲进酒店前台被撞粉碎](https://so.toutiao.com/search?keyword=宝马车冲进酒店前台被撞粉碎)
 1. [实探“禁止私熏腊肉”的四川通江](https://so.toutiao.com/search?keyword=实探“禁止私熏腊肉”的四川通江)
 1. [你婚后会选择和老人住在一起吗](https://so.toutiao.com/search?keyword=你婚后会选择和老人住在一起吗)
